# api_fraym_rag

./: .gitignore  README.md  SESSION_DOCUMENTATION.md  example_json_response.md  init_knowledge_base.py  main.py  pyproject.toml  session_manager.py  sessions.db  test_adaptive_scenarios.py  test_component_structure.py  test_json_format.py  test_product_invention.py  test_rag.py  test_results.json  test_session_ui.html  test_sessions.py  test_tag_system.py
chroma_langchain_db/: chroma.sqlite3
knowledges/: JSON_STRUCTURE_GUIDE.md  RESPONSE_SCENARIOS.md  customer_service.md  ecommerce_knowledge.md  faq.md  image_catalog.json  product_catalog.md  restaurant_knowledge.md
